--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,4 @@ browser=chrome
 url=https://qa.crmly.net/
 loginUsername=hr101@cybertekschool.com
 loginPassword=UserUser
+loginUsername1=helpdesk100@cybertekschool.com
