--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <systemPath>${project.basedir}/src/test/resources/screenRecorder/MonteScreenRecorder.jar</systemPath>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
