--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
 browser=chrome
-url=https://qa.crmly.net/
+url=https://qa.bleucrm.com/
 loginUsername=hr101@cybertekschool.com
 loginPassword=UserUser
