--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,5 @@
 browser=chrome
 url= https://qa.openlycrm.com/
+#url=https://qa.nextbasecrm.com/
 loginUsername=hr101@cybertekschool.com
 loginPassword=UserUser
