--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
 browser=chrome
-url=https://qa.openlycrm.com/
+url=https://login.openlycrm.com/
 loginUsername=hr101@cybertekschool.com
 loginPassword=UserUser
 loginUsername1=helpdesk100@cybertekschool.com
